--- a/src/Components/MainNavigation.module.css
+++ b/src/Components/MainNavigation.module.css
@@ -2,7 +2,7 @@
 {
     text-align: center;
     width: auto;
-    margin-bottom: 1rem;
+    /* margin-bottom: 1rem; */
     padding: 10px;
     display: flex;
     align-items: center;
